# Rusplorer

./: .gitignore  Cargo.toml  README.md  build-dev.ps1  build-prod.ps1  build.ps1  build.rs  dev.lnk  rusplorer.config.json
.cargo/: config.toml
.github/agents/: rusplorer-updater.agent.md
source_code/: Cargo.toml  README.md  build-dev.ps1  build-prod.lnk  build-prod.ps1  build.rs
source_code/logo/: Rusplorer logo.af  Rusplorer logo.af~lock~  app.rc
source_code/src/: clipboard.rs  config.rs  drives.rs  file_utils.rs  fs_ops.rs  jobs.rs  lib.rs  main.rs  navigation.rs  ole.rs  shortcuts.rs  tree.rs  types.rs  ui_dialogs.rs  ui_file_list.rs  ui_left_panel.rs  ui_thumbnails.rs  updater.rs
source_code/tools/: analyze_exe.py  subset_fonts.py
src/: main.rs
tools/dragdrop_backup_20260608_155626/: Directory_DragDropHandlers.reg  Folder_DragDropHandlers.reg
