[package]
name = "rusplorer"
version = "0.1.0"
edition = "2024"

[dependencies]
egui = "0.27"
eframe = "0.27"
egui-winit = "0.27"
arboard = "3.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"

[[bin]]
name = "rusplorer"
path = "src/main.rs"

[profile.dev]
opt-level = 1
lto = false
codegen-units = 256

[profile.release]
opt-level = 3
lto = "full"
codegen-units = 1
strip = true
